--- a/2lineas.json
+++ b/2lineas.json
@@ -3,7 +3,9 @@
   "features": [
     {
       "type": "Feature",
-      "properties": {},
+      "properties": {
+        "color": "blue",
+      },
       "geometry": {
         "type": "LineString",
         "coordinates": [
